レイアウトの調整

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 		<a href="#" gumby-goto="#con1" gumby-offset="-60">
 			<div class="menut1">
 				<img class="menupic" src="images/menu1.jpg">
-				<h4 class="menus">消防団について</h3>
+				<h4 class="menus">消防団について<i class="icon-right-open-big menuicon"></i></h3>
 			</div>
 		</a>
 	</div>
