メニュー追加

--- a/index.html
+++ b/index.html
@@ -128,6 +128,9 @@
   js.src = "//connect.facebook.net/ja_JP/sdk.js#xfbml=1&version=v2.0";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
+	<div id="navbar">
+			<p id="navicon"><a href="#" gumby-torigger="#modal1"><i class="icon-video"></i></a><a href="#" gumby-torigger="#modal2"><i class="icon-info-circled"></i></a></p>
+	</div>
 	<div id="top">
 		<h2 id="subtitle">町田市消防団</h2>
 		<h1 id="title">団員募集!!</h1>
@@ -141,7 +144,43 @@
 		<a href="#" gumby-goto="#con1" gumby-offset="-60">
 			<div class="menut1">
 				<img class="menupic" src="images/menu1.jpg">
-				<h4 class="menus">消防団について<i class="icon-right-open-big menuicon"></i></h4>
+				<h4 class="menus">消防団について</h4>
+			</div>
+		</a>
+		<a href="#" gumby-goto="#con2" gumby-offset="-60">
+			<div class="menut2">
+				<img class="menupic" src="images/menu2.jpg">
+				<h4 class="menus">消防団員と消防士の違い</h4>
+			</div>
+		</a>
+		<a href="#" gumby-goto="#con3" gumby-offset="-60">
+			<div class="menut1">
+				<img class="menupic" src="images/menu3.jpg">
+				<h4 class="menus">消防団員の日常</h4>
+			</div>
+		</a>
+		<a href="#" gumby-goto="#con4" gumby-offset="-60">
+			<div class="menut2">
+				<img class="menupic" src="images/menu4.jpg">
+				<h4 class="menus">消防団をやる意味</h4>
+			</div>
+		</a>
+		<a href="#" gumby-goto="#con5" gumby-offset="-60">
+			<div class="menut1">
+				<img class="menupic" src="images/menu5.jpg">
+				<h4 class="menus">消防団の年間行事</h4>
+			</div>
+		</a>
+		<a href="#" gumby-goto="#con6" gumby-offset="-60">
+			<div class="menut2">
+				<img class="menupic" src="images/menu6.jpg">
+				<h4 class="menus">火事の時の仕事</h4>
+			</div>
+		</a>
+		<a href="#" gumby-goto="#con7" gumby-offset="-60">
+			<div class="menut1">
+				<img class="menupic" src="images/menu7.jpg">
+				<h4 class="menus">お問い合わせ</h4>
 			</div>
 		</a>
 	</div>
