謎のマージン

--- a/index.html
+++ b/index.html
@@ -184,6 +184,9 @@
 			</div>
 		</a>
 	</div>
+	<div id="syokai">
+		<h4 id="syot">インタビューに協力して<br>いただいた団員の方々</h4>
+	</div>
 
 
 	<!-- Grab Google CDN's jQuery, fall back to local if offline -->
