コンテンツを追加していくう

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 	<div id="navbar">
-			<p id="navicon"><a href="#" gumby-torigger="#modal1"><i class="icon-video"></i></a><a href="#" gumby-torigger="#modal2"><i class="icon-info-circled"></i></a></p>
+			<p id="navicon"><a href="#" gumby-trigger="#modal1"><i class="icon-video"></i></a><a href="#" gumby-trigger="#modal2"><i class="icon-info-circled"></i></a></p>
 	</div>
 	<div id="top">
 		<h2 id="subtitle">町田市消防団</h2>
@@ -186,6 +186,16 @@
 	</div>
 	<div id="syokai">
 		<h4 id="syot">インタビューに協力して<br>いただいた団員の方々</h4>
+	</div>
+	<div><a href="#" gumby-trigger="#modal3"><img src="images/sh1.jpg" class="shpic"></a><a href="#" gumby-trigger="#modal4"><img src="images/sh2.jpg" class="shpic"></a><a href="#" gumby-trigger="#modal5"><img src="images/sh3.jpg" class="shpic"></a></div>
+	<div class="contents" id="con1">
+		<h3 class="contitle">消防団について</h3>
+			<p class="context">	
+				しかし、消防団の活動は消化活動だけに止まりません。他にも例えば、事故があった時の危険排除、降雪時の除雪、台風などの自然災害の際の事故警戒、川への増水の警戒、避難指示など、多岐にわたります。<br>
+				他にも、地域の小学校などでの防災訓練、年末には歳末警戒、夏には地域のお祭りなどでの火事への対策などもしています(詳しくは「消防団の年間行事」の項で説明します。）<br>
+				また、消防団員の人々は非常勤で、いつもは別々の仕事をしており、非常時に召集されます。<br>
+				消防団は昔から火事の際の消火を行っており、消防署ができた今でも、防災訓練などの地域に根付いた活動を行っています。
+			</p>
 	</div>
 
 
