画像の拡張子を調整

--- a/index.html
+++ b/index.html
@@ -191,10 +191,19 @@
 	<div class="contents" id="con1">
 		<h3 class="contitle">消防団について</h3>
 			<p class="context">	
+				消防団とは、普段仕事をしている人々がいざ119番通報があった時に、集まれる人が詰所(消防団の消防署のようなところ)に集まり、消化活動をする団体です。<br>
 				しかし、消防団の活動は消化活動だけに止まりません。他にも例えば、事故があった時の危険排除、降雪時の除雪、台風などの自然災害の際の事故警戒、川への増水の警戒、避難指示など、多岐にわたります。<br>
 				他にも、地域の小学校などでの防災訓練、年末には歳末警戒、夏には地域のお祭りなどでの火事への対策などもしています(詳しくは「消防団の年間行事」の項で説明します。）<br>
 				また、消防団員の人々は非常勤で、いつもは別々の仕事をしており、非常時に召集されます。<br>
 				消防団は昔から火事の際の消火を行っており、消防署ができた今でも、防災訓練などの地域に根付いた活動を行っています。
+			</p>
+	</div>
+	<div class="contents" id="con2">
+		<h3 class="contitle">消防団員と消防士の違い</h3>
+			<p class="context">
+				簡単に言えば、消防団は仕事ではない、というところでしょう。<br>
+				消防署は消防を本職としていますが、消防団はボランティアで、給料は出ますが仕事ではありません。<br>
+				消防団は非常勤の公務員であり、普段は別の仕事をしています。そして、非常時に召集され、災害に対応します。もともと地域には消防団しかなく、火消しの役割も消防団が行っていました。そのため、消防団員も地域から集めていました。消防署ができ、消防の役割を負うようになってからは、消防団は主に防災・防火・サポートに回っています。
 			</p>
 	</div>
 
