--- a/index.html
+++ b/index.html
@@ -167,13 +167,13 @@
 		</a>
 		<a href="#" gumby-goto="#con5" gumby-offset="-60">
 			<div class="menut1">
-				<img class="menupic" src="images/menu5.jpg">
+				<img class="menupic" src="images/menu5.JPG">
 				<h4 class="menus">消防団の年間行事</h4>
 			</div>
 		</a>
 		<a href="#" gumby-goto="#con6" gumby-offset="-60">
 			<div class="menut2">
-				<img class="menupic" src="images/menu6.jpg">
+				<img class="menupic" src="images/menu6.JPG">
 				<h4 class="menus">火事の時の仕事</h4>
 			</div>
 		</a>
