終わりが見えてきた(眠い

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 		<a href="#" gumby-goto="#con4" gumby-offset="-60">
 			<div class="menut2">
 				<img class="menupic" src="images/menu4.jpg">
-				<h4 class="menus">消防団をやる意味</h4>
+				<h4 class="menus">消防団の良い所・悪い所</h4>
 			</div>
 		</a>
 		<a href="#" gumby-goto="#con5" gumby-offset="-60">
@@ -204,6 +204,43 @@
 				簡単に言えば、消防団は仕事ではない、というところでしょう。<br>
 				消防署は消防を本職としていますが、消防団はボランティアで、給料は出ますが仕事ではありません。<br>
 				消防団は非常勤の公務員であり、普段は別の仕事をしています。そして、非常時に召集され、災害に対応します。もともと地域には消防団しかなく、火消しの役割も消防団が行っていました。そのため、消防団員も地域から集めていました。消防署ができ、消防の役割を負うようになってからは、消防団は主に防災・防火・サポートに回っています。
+			</p>
+	</div>
+	<div class="contents" id="con3">
+		<h3 class="contitle">消防団員の日常</h3>
+			<p class="context">
+				消防団の日頃の訓練は様々です。<br>
+				まず、4月から6月までは「操法」を言う訓練をし、6月には大会もあります。操法の訓練は夜の20時から行い、遅い時は23時頃までやることもあります。<br>
+				操法以外では、月一回に機器の点検を行ったり、消防団だけでの消火訓練、消防署との連携訓練なども行います。<br>
+				また、分団独自の訓練も不定期に行なっています。
+			</p>
+	</div>
+	<div class="contents" id="con4">
+		<h3 class="contitle">消防団の良い所・悪い所</h3>
+			<p class="context">
+				荻原さん:上級救命講習を習うので家族に教えたり、ロープの使い方、機械などをいろいろやるので詳しくなったり、日常に使えますね。あとは地域のために活動できる、というのはいいところですね。出てくることは多いので、既婚者は大変でしょうね。<br>
+				茂木さん:火事の現場に行って、自分たちの力で水を出して火事を消せた時は誇らしくて、よかったなあ、と思います。悪い所は時間を取られることですね。土日や夜も出てくることがありますし、家族にも負担をかけます。一生涯ではないので、家族にも理解を求めてますけど...自己満足の世界ですね。仲間意識を育てたり、地域を守ったり。<br>
+				近馬さん:操法大会の選手になるとかなり忙しいですね。ならなくとも準備で忙しくなります。仕事も早く上がらなきゃいけないので、仕事もたまるし、疲れも溜まります。でも、仲間内で楽しんだり、いいこともたくさんあります。
+			</p>
+	</div>
+	<div class="contents" id="con5">
+		<h3 class="contitle">消防団の年間行事</h3>
+			<p class="context">
+				消防団の年間行事としては、<br>
+				1月:初出式、町内会や子供会などのイベント警戒<br>
+				2月-3月:除雪活動、新入団員勧誘、火災予防運動<br>
+				4月:操法訓練、新入団員教育<br>
+				6月:操法大会<br>
+				7-8月:応急救護訓練、お祭りなどのイベント警戒<br>
+				年末:歳末警戒<br>
+				などがあります。かいつまんで説明すると、警戒はイベントの際に火事が起こらないように供えたり、万が一火事が起こった時に対応します。操法大会はポンプの扱いを分団や市の団で競う大会で、4月から練習を行います。防災訓練では地域や学校で初期消火などを教え、歳末警戒は消防車で地域を回り、火の用心を広報します。
+			</p>
+	</div>
+	<div class="contents" id="con6">
+		<h3 class="contitle">火事の時の仕事</h3>
+			<p class="context">
+				火事が起きた時、メールで119番通報が来ます。行ける人だけが詰所に集まり、活動できる人数が集まったら出発し、出発してからは消防署と一緒にポンプ車で緊急走行します。<br>
+				現場に着いたら水を出したり、消防署のサポートを行いますが、消防署と違い、火の中には入りません。
 			</p>
 	</div>
 
