できてきた

--- a/index.html
+++ b/index.html
@@ -243,6 +243,29 @@
 				現場に着いたら水を出したり、消防署のサポートを行いますが、消防署と違い、火の中には入りません。
 			</p>
 	</div>
+	<div id="footer">
+		<p id="tel">Tel:<a href="tel:0427242107">042-724-2107</a><br>
+			<a href="https://www.city.machida.tokyo.jp/kurashi/bouhan/bousai/syouboudan/">町田市ホームページ</a></p>
+			<ul>
+				<li class="field">
+					<input class="text input" type="text" placeholder="氏名">
+				</li>
+				<li class="field">
+					<input class="email input" type="email" placeholder="メールアドレス">
+				</li>
+				<li class="field">
+					<input class="phone input" type="tel" placeholder="電話番号">
+				</li>
+				<li class="field">
+					<input class="text input" type="text" placeholder="件名">
+				</li>
+				<li class="field">
+					<textarea class="input textarea" placeholder="内容" rows="3"></textarea>
+				</li>
+				<li><p id="send">送信</p></li>
+			</ul>
+
+	</div>
 
 
 	<!-- Grab Google CDN's jQuery, fall back to local if offline -->
