--- a/index.html
+++ b/index.html
@@ -128,8 +128,67 @@
   js.src = "//connect.facebook.net/ja_JP/sdk.js#xfbml=1&version=v2.0";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
+
+
+
+<!-- ここから本文 -->
+	<div class="modal" id="modal1">
+		<div class="content">
+			<a class="close switch" gumby-trigger="|#modal1"><i class="icon-cancel" /></i></a>
+			<div class="row">
+				<div class="ten columns centered text-center">
+					<h2>This is a modal</h2>
+					<p>Gumby modals are easy to make using Toggles &amp; Switches. The <span class="label default">.modal</span> class already has the required styles which you can open and close using Toggles &amp; Switches.</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="modal" id="modal2">
+		<div class="content">
+			<a class="close switch" gumby-trigger="|#modal2"><i class="icon-cancel" /></i></a>
+			<div class="row">
+				<div class="ten columns centered text-center">
+					<h3>このホームページについて</h3>
+					<p>頑張れ自分</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="modal" id="modal3">
+		<div class="content">
+			<a class="close switch" gumby-trigger="|#modal3"><i class="icon-cancel" /></i></a>
+			<div class="row">
+				<div class="ten columns centered text-center">
+					<h3>荻原さん</h3>
+					<p>頑張れ自分</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="modal" id="modal4">
+		<div class="content">
+			<a class="close switch" gumby-trigger="|#modal4"><i class="icon-cancel" /></i></a>
+			<div class="row">
+				<div class="ten columns centered text-center">
+					<h3>茂木さん</h3>
+					<p>頑張れ自分</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="modal" id="modal4">
+		<div class="content">
+			<a class="close switch" gumby-trigger="|#modal5"><i class="icon-cancel" /></i></a>
+			<div class="row">
+				<div class="ten columns centered text-center">
+					<h3>近馬さん</h3>
+					<p>頑張れ自分</p>
+				</div>
+			</div>
+		</div>
+	</div>
 	<div id="navbar">
-			<p id="navicon"><a href="#" gumby-trigger="#modal1"><i class="icon-video"></i></a><a href="#" gumby-trigger="#modal2"><i class="icon-info-circled"></i></a></p>
+			<p id="navicon"><a href="#" gumby-trigger="#modal1" class="switch"><i class="icon-video"></i></a><a href="#" gumby-trigger="#modal2" class="switch"><i class="icon-info-circled"></i></a></p>
 	</div>
 	<div id="top">
 		<h2 id="subtitle">町田市消防団</h2>
@@ -187,7 +246,7 @@
 	<div id="syokai">
 		<h4 id="syot">インタビューに協力して<br>いただいた団員の方々</h4>
 	</div>
-	<div><a href="#" gumby-trigger="#modal3"><img src="images/sh1.jpg" class="shpic"></a><a href="#" gumby-trigger="#modal4"><img src="images/sh2.jpg" class="shpic"></a><a href="#" gumby-trigger="#modal5"><img src="images/sh3.jpg" class="shpic"></a></div>
+	<div><a href="#" gumby-trigger="#modal3" class="switch"><img src="images/sh1.jpg" class="shpic"></a><a href="#" gumby-trigger="#modal4" class="switch"><img src="images/sh2.jpg" class="shpic"></a><a href="#" gumby-trigger="#modal5" class="switch"><img src="images/sh3.jpg" class="shpic"></a></div>
 	<div class="contents" id="con1">
 		<h3 class="contitle">消防団について</h3>
 			<p class="context">	
