--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
 			<a class="close switch" gumby-trigger="|#modal1"><i class="icon-cancel" /></i></a>
 			<div class="row">
 				<div class="ten columns centered text-center">
-					<h2>This is a modal</h2>
-					<p>Gumby modals are easy to make using Toggles &amp; Switches. The <span class="label default">.modal</span> class already has the required styles which you can open and close using Toggles &amp; Switches.</p>
+					<h2>プロモーション</h2>
+					<iframe width="100%" height="auto" src="https://www.youtube.com/embed/ZD4QeVlqHNM" frameborder="0" allowfullscreen></iframe>
 				</div>
 			</div>
 		</div>
@@ -149,7 +149,9 @@
 			<div class="row">
 				<div class="ten columns centered text-center">
 					<h3>このホームページについて</h3>
-					<p>頑張れ自分</p>
+					<p>このホームページは、町田市消防団の若い世代の消防団員募集の一環として、サレジオ高専3年デザイン学科に来た依頼を元に作成されたものです。<br>
+						消防団に興味を持っているが、情報がなくまだ入っていない人々を後押ししたい、という意味で、実際団員の方々にインタビューをし、その情報を元に作成しました。<br>
+						このホームページはサレジオ高専デザイン学科3年 安藤が作成しました。</p>
 				</div>
 			</div>
 		</div>
@@ -160,7 +162,9 @@
 			<div class="row">
 				<div class="ten columns centered text-center">
 					<h3>荻原さん</h3>
-					<p>頑張れ自分</p>
+					<p>町田市消防団第5分団副分団長。<br>
+						大学生の時知り合いが入っており、誘われて入りました。<br>やりたかったからというよりは暇だったからという感じ。</p>
+						<img src="images/mo1.jpg">
 				</div>
 			</div>
 		</div>
@@ -171,24 +175,28 @@
 			<div class="row">
 				<div class="ten columns centered text-center">
 					<h3>茂木さん</h3>
-					<p>頑張れ自分</p>
+					<p>町田市消防団第5分団所属。<br>
+						消防団の勧誘が家に来て、同級生3人と一緒に21歳の時加入。<br>消防団の事は入るまで知らず、同級生以外は知らない人ばかりだったが仲良くしてくれ、行くこと自体が楽しかったという。</p>
+						<img src="images/mo2.jpg">
 				</div>
 			</div>
 		</div>
 	</div>
-	<div class="modal" id="modal4">
+	<div class="modal" id="modal5">
 		<div class="content">
 			<a class="close switch" gumby-trigger="|#modal5"><i class="icon-cancel" /></i></a>
 			<div class="row">
 				<div class="ten columns centered text-center">
 					<h3>近馬さん</h3>
-					<p>頑張れ自分</p>
+					<p>町田市消防団第5分団所属。<br>
+						33歳の頃家を買い、引っ越してきたばかりで知り合いがいないため、知り合いを作るきっかけを作るため消防団へ入った。</p>
+						<img src="images/mo3.jpg">
 				</div>
 			</div>
 		</div>
 	</div>
 	<div id="navbar">
-			<p id="navicon"><a href="#" gumby-trigger="#modal1" class="switch"><i class="icon-video"></i></a><a href="#" gumby-trigger="#modal2" class="switch"><i class="icon-info-circled"></i></a></p>
+			<p id="navicon"><a href="#" gumby-trigger="#modal1" class="switch"><i class="icon-video navi"></i></a><a href="#" gumby-trigger="#modal2" class="switch"><i class="icon-info-circled navi" id="info"></i></a></p>
 	</div>
 	<div id="top">
 		<h2 id="subtitle">町田市消防団</h2>
