--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 			<div class="row">
 				<div class="ten columns centered text-center">
 					<h2>プロモーション</h2>
-					<iframe width="100%" height="auto" src="https://www.youtube.com/embed/ZD4QeVlqHNM" frameborder="0" allowfullscreen></iframe>
+					<iframe width="100%" height="auto" src="https://www.youtube.com/embed/ADjXGnmn-wI" frameborder="0" allowfullscreen></iframe>
 				</div>
 			</div>
 		</div>
